--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: border-box;
+  font-family: "Varela Round", sans-serif !important;
 }
 
 a {
@@ -17,7 +17,7 @@ a {
 * {
   box-sizing: border-box;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -26,4 +26,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
