--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,4 +16,28 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Varela Round", sans-serif !important;
+}
+
+.MuiDataGrid-root,
+.MuiDataGrid-root .MuiDataGrid-columnHeader,
+.MuiDataGrid-root .MuiDataGrid-cell {
+  border: none !important;
+  outline: none !important;
+}
+
+.MuiDataGrid-columnSeparator {
+  display: none !important;
+}
+
+.MuiDataGrid-row:hover {
+  @apply rounded-lg !important;
+}
+
+.MuiDataGrid-columnHeaders {
+  @apply bg-slate-100 rounded-lg !important;
+}
+
+.input-rounded .MuiOutlinedInput-root {
+ @apply rounded-xl
 }
