--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,9 +49,13 @@ a {
 }
 
 .input-rounded .MuiOutlinedInput-root {
- @apply rounded-xl
+  @apply rounded-xl;
 }
 
-.appBar-button-animation{
-@apply transition-all duration-200 cursor-pointer hover:scale-90
+.MuiButton-root {
+  @apply rounded-xl;
+}
+
+.appBar-button-animation {
+  @apply transition-all duration-200 cursor-pointer hover:scale-90;
 }
