--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,13 @@ a {
   }
 } */
 
+::-webkit-scrollbar {
+  width: 0;
+  /* Remove scrollbar space */
+  background: transparent;
+  /* Optional: just make scrollbar invisible */
+}
+
 .MuiDataGrid-root,
 .MuiDataGrid-root .MuiDataGrid-columnHeader,
 .MuiDataGrid-root .MuiDataGrid-cell {
