--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,12 @@ a {
   }
 } */
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 ::-webkit-scrollbar {
   width: 0;
   /* Remove scrollbar space */
